--- a/package.json
+++ b/package.json
@@ -2,26 +2,59 @@
   "name": "nodejs-ts-express-boilerplate",
   "version": "1.0.0",
   "description": "Boilerplate template for a nodejs express api with typescript language",
-  "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean": "rm -rf coverage build tmp",
+    "prebuild": "npm run lint",
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "prettier": "prettier --write **/*.ts",
+    "test": "jest -i --colors --verbose --detectOpenHandles --no-cache --watchAll",
+    "build": "npm run clean && tsc -p tsconfig.build.json && npm run lint",
+    "build:watch": "tsc -w -p tsconfig.build.json",
+    "dev": "npm run build && nodemon --config restart.json",
+    "start": "ts-node -r tsconfig-paths/register -r dotenv/config src/index"
   },
   "author": "ks",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "dotenv": "^16.0.3",
+    "enforce-branch-name": "^1.1.2",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.7.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
+    "jest-html-reporter": "^3.7.0",
+    "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
+    "rimraf": "^4.3.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
-    "typescript": "*",
-    "husky": "^8.0.0"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsutils": "^3.21.0",
+    "typescript": "~4.9.5"
+  },
+  "dependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "http-status": "^1.6.2",
+    "joi": "^17.8.3",
+    "module-alias": "^2.2.2",
+    "tslib": "^2.5.0",
+    "winston": "^3.8.2",
+    "xss-clean": "^0.1.1"
   }
 }
